get stock ticker functionality added

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Home\\anaconda3\\envs\\spcopenai\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import dspy\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,6 +188,43 @@
    ],
    "source": [
     "answer.toDict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DeriveTicker(dspy.Signature):\n",
+    "    \"\"\"Given a search query containing a company name or ticker, derive the proper stock market ticker for the intended company.\"\"\"\n",
+    "\n",
+    "    search_query = dspy.InputField()\n",
+    "    ticker = dspy.OutputField(desc=\"The company ticker in one word, or N/A if the company is not found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Prediction(\n",
+       "    ticker='N/A'\n",
+       ")"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock_derive = dspy.Predict(DeriveTicker)\n",
+    "answer = stock_derive(search_query=\"A not real company\")\n",
+    "answer"
    ]
   },
   {
